<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mvcode_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:text="@string/connection_dialog_code"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/mvcode_edit"
            android:layout_width="fill_parent"
            android:layout_height="36dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/mvhost_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="left"
                android:text="@string/connection_dialog_host"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/mvconnect_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_dialog_connect_zhiboyun" />
        </LinearLayout>

        <EditText
            android:id="@+id/mvhost_edit"
            android:layout_width="fill_parent"
            android:layout_height="36dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <TextView
            android:id="@+id/mvport_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:text="@string/connection_dialog_port"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
                android:id="@+id/mvconnect_tcp_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_dialog_connect_tcp" />
        </LinearLayout>
        
        <EditText
            android:id="@+id/mvport_edit"
            android:layout_width="fill_parent"
            android:layout_height="36dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dip" />
    </LinearLayout>

</ScrollView>