<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
		
		<TextView android:id="@+id/setting_dialog_video_width_view"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/setting_dialog_video_width" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
		<EditText android:id="@+id/setting_dialog_video_width_edit"
			android:layout_height="40dip" android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:scrollHorizontally="true" android:autoText="false"
			android:capitalize="none" android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="14dip" />

		<TextView android:id="@+id/setting_dialog_video_height_view"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/setting_dialog_video_height" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:id="@+id/setting_dialog_video_height_edit"
			android:layout_height="40dip" android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:scrollHorizontally="true" android:autoText="false"
			android:capitalize="none" android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="14dip" />


	  	<TextView android:id="@+id/setting_dialog_bitrate_view"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/setting_dialog_bitrate" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" /> 

		<EditText android:id="@+id/setting_dialog_bitrate_edit"
			android:layout_height="40dip" android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:scrollHorizontally="true" android:autoText="false"
			android:capitalize="none" android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="14dip" />


		<!-- <TextView android:id="@+id/setting_dialog_framerate_view"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/setting_dialog_framerate" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		  <EditText android:id="@+id/setting_dialog_framerate_edit"
			android:layout_height="40dip" android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:scrollHorizontally="true" android:autoText="false"
			android:capitalize="none" android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="14dip" /> -->

		<TextView android:id="@+id/setting_dialog_timeout_view"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/setting_dialog_timeout" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:id="@+id/setting_dialog_timeout_edit"
			android:layout_height="40dip" android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:scrollHorizontally="true" android:autoText="false"
			android:capitalize="none" android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="14dip" />
			
			
		<TextView android:id="@+id/setting_dialog_img_width_view"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/setting_dialog_img_width" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
		<EditText android:id="@+id/setting_dialog_img_width_edit"
			android:layout_height="40dip" android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:scrollHorizontally="true" android:autoText="false"
			android:capitalize="none" android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="14dip" />

		<TextView android:id="@+id/setting_dialog_img_height_view"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/setting_dialog_img_height" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:id="@+id/setting_dialog_img_height_edit"
			android:layout_height="40dip" android:layout_width="fill_parent"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:scrollHorizontally="true" android:autoText="false"
			android:capitalize="none" android:gravity="fill_horizontal"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="14dip" />


</LinearLayout>

</ScrollView>  

